Setup boilerplat with gulp, stylus, pug and browsersync

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Knochenmark Portfolio
+
+<html:5>
+  <head>
+    <title>Knochenmark Portfolio</title>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="description" content="Knochenmarks Portfolio"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="assets/css/main.css"/>
+  </head>
+  <body>
+    <header class="header-page">
+      <div class="container">
+        <div class="header-page__brand brand">
+          <p>a simple boilerplate using Gulp, Jade, Stylus and Browsersync</p>
+        </div>
+      </div>
+    </header>
+    <div class="container">
+      <main class="main-page">
+        <p>Mark's Portfolio 234</p>
+      </main>
+    </div>
+    <footer class="footer-page">By <a class="footer-page__link" href="https://github.com/knochenmark">Knochenmark</a></footer>
+    <script async="async" src="assets/js/main.js"></script>
+  </body>
+</html:5>
