👾  Playing around with emojies in footer

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     </header>
     <div class="container">
       <main class="main-page">
-        <p>Mark's Portfolio 234</p>
+        <p>Mark's Portfolio</p>
       </main>
     </div>
-    <footer class="footer-page">By <a class="footer-page__link" href="https://github.com/knochenmark">Knochenmark</a></footer>
+    <footer class="footer-page">
+      <p>Made with <span class="emoji">&#x1F37A </span> by <a class="footer-page__link" href="https://github.com/knochenmark">Knochenmark</a></p>
+    </footer>
     <script async="async" src="assets/js/main.js"></script>
   </body>
 </html:5>
