--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
           <div class="wrapper">
             <h1 class="author">Knochenmark</h1>
             <h2 class="subline">Some cool wording</h2>
+            <nav class="home-navigation">
+              <div class="nav-item"><a href="#projects">Projects</a></div>
+              <div class="nav-item"><a href="#me">About Me</a></div>
+              <div class="nav-item"><a href="contact">Contact</a></div>
+            </nav>
           </div>
         </div>
       </div>
