--- a/index.html
+++ b/index.html
@@ -28,23 +28,26 @@
         <div class="dark"></div>
       </div>
     </section>
-    <section id="pages">
-      <aside class="vertical-sidebar">
-        <div class="vertical-logo"></div>
-        <div class="vertical-menu"></div>
-        <div class="vertical-social">
-          <svg class="logo">
-            <use xlink:href="/src/img/codepen"></use>
-          </svg>
-        </div>
-      </aside>
+    <aside class="vertical-sidebar">
+      <div class="vertical-logo"></div>
+      <div class="vertical-menu"></div>
+      <div class="vertical-social">
+        <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg></div>
+      </div>
+    </aside>
+    <section id="projects">
       <article>
-        <p>some text</p>
-        <footer class="footer-page">
-          <p>Made with <span class="emoji">&#x1F37A </span> by <a class="footer-page__link" href="https://github.com/knochenmark">Knochenmark</a></p>
-        </footer>
+        <p>Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur, weil er Schmerz ist, es sei denn, es kommt zu zufälligen Umständen, in denen Mühen und Schmerz ihm große Freude bereiten können. Um ein triviales Beispiel zu nehmen, wer von uns unterzieht sich je anstrengender körperlicher Betätigung, außer um Vorteile daraus zu ziehen?</p>
+        <p>Aber wer hat irgend ein Recht, einen Menschen zu tadeln, der die Entscheidung trifft, eine Freude zu genießen, die keine unangenehmen Folgen hat, oder einen, der Schmerz vermeidet, welcher keine daraus resultierende Freude nach sich zieht? Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur, weil er Schmerz ist, es sei denn, es kommt zu zufälligen Umständen, in denen Mühen und Schmerz ihm große Freude bereiten können.</p>
+        <p>
+          Um ein triviales Beispiel zu nehmen, wer von uns unterzieht sich je anstrengender körperlicher Betätigung, außer um Vorteile daraus zu ziehen? Aber wer hat irgend ein Recht, einen Menschen zu tadeln, der die Entscheidung trifft, eine Freude zu genießen, die keine unangenehmen Folgen hat, oder einen, der Schmerz vermeidet, welcher keine daraus resultierende Freude nach sich zieht? Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur,
+          
+        </p>
       </article>
     </section>
+    <footer class="footer-page">
+      <p>Made with <span class="emoji">&#x1F37A </span> by <a class="footer-page__link" href="https://github.com/knochenmark">Knochenmark</a></p>
+    </footer>
     <script async="async" src="assets/js/main.js"></script>
   </body>
 </html:5>
