--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="light">
           <div class="wrapper">
             <h1 class="author">Knochenmark</h1>
-            <h2 class="subline">Some cool wording</h2>
+            <h2 class="subline">design. code. experiment.</h2>
             <nav class="home-navigation">
               <div class="nav-item"><a href="#projects">Projects</a></div>
-              <div class="nav-item"><a href="#me">About Me</a></div>
-              <div class="nav-item"><a href="contact">Contact</a></div>
+              <div class="nav-item"><a href="#about">About Me</a></div>
+              <div class="nav-item"><a href="#contact">Contact</a></div>
             </nav>
           </div>
         </div>
@@ -29,24 +29,74 @@
       </div>
     </section>
     <aside class="vertical-sidebar">
-      <div class="vertical-logo"></div>
-      <div class="vertical-menu"></div>
+      <div class="vertical-logo">
+        <div class="icon"><a href="#home"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"><path d="M16.949 16.132h2.332c-1.092 1.728-3.605 3.638-6.281 3.852v-4.096c1.492-.38 3.027-1.302 4.245-2.963l-1.613-1.183c-.778 1.062-1.711 1.711-2.632 2.056v-3.805l.354-.088c2.472-.598 5.027-1.215 5.613-3.431.558-2.107-.952-3.66-3.061-4.319.162.756.109 1.378-.123 2.085.802.347 1.473.874 1.25 1.723-.275 1.042-2.169 1.518-4.033 1.97v-.036c0-2.39 2-2.619 2-4.897 0-1.654-1.346-3-3-3s-3 1.346-3 3c0 2.297 2 2.487 2 4.897v.556c-2.066.617-3.903 1.567-4.039 3.798-.116 1.893 1.34 3.645 4.039 3.818v3.931c-2.639-.18-5.133-2.053-6.281-3.868h2.332l-5.051-3.132v5.912l1.269-1.8c2.702 4.503 6.379 4.305 8.731 6.888 2.352-2.583 6.029-2.385 8.731-6.889l1.269 1.8v-5.911l-5.051 3.132zm-4.949-14.132c.552 0 1 .449 1 1s-.448 1-1 1-1-.449-1-1 .448-1 1-1zm-3.043 10.374c.053-.866.809-1.384 2.043-1.814v3.516c-1.539-.159-2.087-.985-2.043-1.702z"/></svg>
+</a></div>
+      </div>
+      <div class="vertical-menu">
+        <nav class="home-navigation">
+          <div class="nav-item"><a href="#home">Home</a></div>
+          <div class="nav-item"><a href="#projects">Projects</a></div>
+          <div class="nav-item"><a href="#about">About Me</a></div>
+          <div class="nav-item"><a href="#contact">Contact</a></div>
+        </nav>
+      </div>
       <div class="vertical-social">
-        <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg></div>
+        <div class="icon"><a href="https://github.com/Knochenmark"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg></a></div>
       </div>
     </aside>
     <section id="projects">
       <article>
+        <h1>Projects</h1>
+        <div class="project-list">
+          <div class="project"><a href="#">
+              <div class="project-img"><img src="assets/img/700x400.png"/></div>
+              <div class="project-desc">
+                <div class="project-title">Weather App</div>
+                <div class="project-text">FCC Challenge Weather app bliblablub</div>
+              </div></a></div>
+        </div>
+        <div class="project-list">
+          <div class="project"><a href="#">
+              <div class="project-img"><img src="assets/img/700x400.png"/></div>
+              <div class="project-desc">
+                <div class="project-title">Weather App</div>
+                <div class="project-text">FCC Challenge Weather app bliblablub</div>
+              </div></a></div>
+        </div>
+        <div class="project-list">
+          <div class="project"><a href="#">
+              <div class="project-desc">
+                <div class="project-title">Weather App</div>
+                <div class="project-text">FCC Challenge Weather app bliblablub</div>
+              </div>
+              <div class="project-img"><img src="assets/img/700x400.png"/></div></a></div>
+        </div>
+        <div class="project-list">
+          <div class="project"><a href="#">
+              <div class="project-img"><img src="assets/img/700x400.png"/></div>
+              <div class="project-desc">
+                <div class="project-title">Weather App</div>
+                <div class="project-text">FCC Challenge Weather app bliblablub</div>
+              </div></a></div>
+        </div>
+      </article>
+    </section>
+    <section id="about">
+      <article>
+        <h1>About Me</h1>
         <p>Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur, weil er Schmerz ist, es sei denn, es kommt zu zufälligen Umständen, in denen Mühen und Schmerz ihm große Freude bereiten können. Um ein triviales Beispiel zu nehmen, wer von uns unterzieht sich je anstrengender körperlicher Betätigung, außer um Vorteile daraus zu ziehen?</p>
         <p>Aber wer hat irgend ein Recht, einen Menschen zu tadeln, der die Entscheidung trifft, eine Freude zu genießen, die keine unangenehmen Folgen hat, oder einen, der Schmerz vermeidet, welcher keine daraus resultierende Freude nach sich zieht? Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur, weil er Schmerz ist, es sei denn, es kommt zu zufälligen Umständen, in denen Mühen und Schmerz ihm große Freude bereiten können.</p>
-        <p>
-          Um ein triviales Beispiel zu nehmen, wer von uns unterzieht sich je anstrengender körperlicher Betätigung, außer um Vorteile daraus zu ziehen? Aber wer hat irgend ein Recht, einen Menschen zu tadeln, der die Entscheidung trifft, eine Freude zu genießen, die keine unangenehmen Folgen hat, oder einen, der Schmerz vermeidet, welcher keine daraus resultierende Freude nach sich zieht? Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur,
-          
-        </p>
+        <p>Um ein triviales Beispiel zu nehmen, wer von uns unterzieht sich je anstrengender körperlicher Betätigung, außer um Vorteile daraus zu ziehen? Aber wer hat irgend ein Recht, einen Menschen zu tadeln, der die Entscheidung trifft, eine Freude zu genießen, die keine unangenehmen Folgen hat, oder einen, der Schmerz vermeidet, welcher keine daraus resultierende Freude nach sich zieht? Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur,</p>
+      </article>
+    </section>
+    <section id="contact">
+      <article>
+        <h1>Contact</h1>
       </article>
     </section>
     <footer class="footer-page">
-      <p>Made with <span class="emoji">&#x1F37A </span> by <a class="footer-page__link" href="https://github.com/knochenmark">Knochenmark</a></p>
+      <p>Made with <span class="emoji">&#x1F37A</span> by <a class="footer-page__link" href="https://github.com/knochenmark">Knochenmark</a></p>
     </footer>
     <script async="async" src="assets/js/main.js"></script>
   </body>
