✏️  add some project description for the weather app

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <div class="project-img"><img src="assets/img/weather.jpg"/></div>
               <div class="project-desc">
                 <div class="project-title">Weather App</div>
-                <div class="project-text">FCC Challenge Weather app bliblablub</div>
+                <div class="project-text">Using the darksky weather API to display the current weather, some other metrics and a preview of the current week.</div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/qrqjaQ/">
               <div class="project-img"><img src="assets/img/pomodoro.jpg"/></div>
