✒🎨  change the placeholder for the actual calculator preview image

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="project-text">The memory game Simon using the HTML5 Audio tag.</div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/qaWyOx/">
-              <div class="project-img"><img src="assets/img/700x400.png"/></div>
+              <div class="project-img"><img src="assets/img/calc.jpg"/></div>
               <div class="project-desc">
                 <div class="project-title">Calculator</div>
                 <div class="project-text">Based on the iphone calculator</div>
