✒️  add some temporary content to the contact section

--- a/index.html
+++ b/index.html
@@ -110,11 +110,17 @@
     </section>
     <section id="contact">
       <article>
-        <h1>Contact</h1>
+        <h1>Contact
+          <h2>Thanks for visiting
+            <div class="contact-content">
+              <div class="email"><span>Say hello</span><a href="mailto:placeholder@gmail.com"> placeholder@gmail.com</a></div>
+            </div>
+          </h2>
+        </h1>
       </article>
     </section>
     <footer class="footer-page">
-      <p>Made with <span class="emoji">&#x1F37A</span> by <a class="footer-page__link" href="https://github.com/knochenmark">Knochenmark</a></p>
+      <p>Made with <span class="emoji">&#x1F37A</span> by <a class="footer-page__link" href="https://github.com/knochenmark">Knochenmark</a> 2017©</p>
     </footer>
     <script async="async" src="assets/js/main.js"></script>
   </body>
