--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
       </div>
       <div class="vertical-social">
         <div class="icon"><a href="https://github.com/Knochenmark"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg></a></div>
+        <div class="icon codepen"><a href="https://codepen.io/Knochenmark"><svg viewBox="0 0 63.194 63.086" width="24" height="24">
+    <polygon fill="none" stroke-width="5" stroke-linejoin="round" stroke-miterlimit="10" points="31.54,2.5
+    60.694,21.898 31.54,41.078 2.5,21.681   "></polygon>
+    <polygon fill="none" stroke-width="5" stroke-linejoin="round" stroke-miterlimit="10" points="31.54,21.789
+    60.694,41.405 31.54,60.586 2.5,41.188   "></polygon>
+    <line fill="none" stroke-width="5" stroke-linejoin="round" stroke-miterlimit="10" x1="2.5" y1="21.681" x2="2.5" y2="41.188"></line>
+    <line fill="none" stroke-width="5" stroke-linejoin="round" stroke-miterlimit="10" x1="60.694" y1="21.681" x2="60.694" y2="41.188"></line>
+    <line fill="none" stroke-width="5" stroke-linejoin="round" stroke-miterlimit="10" x1="31.598" y1="3.809" x2="31.598" y2="23.315"></line>
+    <line fill="none" stroke-width="5" stroke-linejoin="round" stroke-miterlimit="10" x1="31.598" y1="41.188" x2="31.598" y2="60.694"></line>
+  </svg>
+</a></div>
       </div>
     </aside>
     <section id="projects">
