🚀  Add hover effect on project links

--- a/index.html
+++ b/index.html
@@ -61,49 +61,81 @@
         <h1>Projects</h1>
         <div class="project-list">
           <div class="project"><a href="https://codepen.io/Knochenmark/full/ZpYKPE/">
-              <div class="project-img"><img src="assets/img/weather.jpg"/></div>
+              <div class="project-img"><img src="assets/img/weather.jpg"/>
+                <div class="project-link">
+                  <div>View on Codepen</div>
+                </div>
+              </div>
               <div class="project-desc">
                 <div class="project-title">Weather App</div>
                 <div class="project-text">Using the darksky weather API to display the current weather, some other metrics and a preview of the current week.</div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/qrqjaQ/">
-              <div class="project-img"><img src="assets/img/pomodoro.jpg"/></div>
+              <div class="project-img"><img src="assets/img/pomodoro.jpg"/>
+                <div class="project-link">
+                  <div>View on Codepen</div>
+                </div>
+              </div>
               <div class="project-desc">
                 <div class="project-title">Pomodoro</div>
                 <div class="project-text">Based on the kitchen clock which is also used for the pomodoro technique to manage time intervals of 25min work and 5min breaks. This project features some really impressive pug and stylus function and mixin usage.</div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/zwrWWP/">
-              <div class="project-img"><img src="assets/img/tictac.jpg"/></div>
+              <div class="project-img"><img src="assets/img/tictac.jpg"/>
+                <div class="project-link">
+                  <div>View on Codepen</div>
+                </div>
+              </div>
               <div class="project-desc">
                 <div class="project-title">Tic Tac Toe</div>
                 <div class="project-text">Featuring some neat looking CSS transitions and effects.</div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/RRyAqE/">
-              <div class="project-img"><img src="assets/img/quote.jpg"/></div>
+              <div class="project-img"><img src="assets/img/quote.jpg"/>
+                <div class="project-link">
+                  <div>View on Codepen</div>
+                </div>
+              </div>
               <div class="project-desc">
                 <div class="project-title">Quote Generator</div>
                 <div class="project-text">With twitter function</div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/GjmZKr/">
-              <div class="project-img"><img src="assets/img/wiki.jpg"/></div>
+              <div class="project-img"><img src="assets/img/wiki.jpg"/>
+                <div class="project-link">
+                  <div>View on Codepen</div>
+                </div>
+              </div>
               <div class="project-desc">
                 <div class="project-title">Wikipedia API</div>
                 <div class="project-text">Using the Wikipedia API</div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/YpRBjw/">
-              <div class="project-img"><img src="assets/img/twitch.jpg"/></div>
+              <div class="project-img"><img src="assets/img/twitch.jpg"/>
+                <div class="project-link">
+                  <div>View on Codepen</div>
+                </div>
+              </div>
               <div class="project-desc">
                 <div class="project-title">Twitch API</div>
                 <div class="project-text">Using the Twitch API</div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/QgjErZ/">
-              <div class="project-img"><img src="assets/img/simon.jpg"/></div>
+              <div class="project-img"><img src="assets/img/simon.jpg"/>
+                <div class="project-link">
+                  <div>View on Codepen</div>
+                </div>
+              </div>
               <div class="project-desc">
                 <div class="project-title">Simon Game</div>
                 <div class="project-text">The memory game Simon using the HTML5 Audio tag.</div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/qaWyOx/">
-              <div class="project-img"><img src="assets/img/calc.jpg"/></div>
+              <div class="project-img"><img src="assets/img/calc.jpg"/>
+                <div class="project-link">
+                  <div>View on Codepen</div>
+                </div>
+              </div>
               <div class="project-desc">
                 <div class="project-title">Calculator</div>
                 <div class="project-text">Based on the iphone calculator</div>
