--- a/index.html
+++ b/index.html
@@ -153,13 +153,9 @@
     </section>
     <section id="contact">
       <article>
-        <h1>Contact
-          <h2>Thanks for visiting
-            <div class="contact-content">
-              <div class="email"><span>Say hello</span><a href="mailto:placeholder@gmail.com"> placeholder@gmail.com</a></div>
-            </div>
-          </h2>
-        </h1>
+        <h2>Thanks for coming by!</h2>
+        <div class="contact-content">I’m always open for a chat so feel free to contact me.</div>
+        <div class="email"><span>Say hi</span><a href="mailto:placeholder@gmail.com">placeholder@gmail.com</a></div>
       </article>
     </section>
     <footer class="footer-page">
