🍕  Rotate through emoji icons in footer text

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       </article>
     </section>
     <footer class="footer-page">
-      <p>Made with <span class="emoji">&#x1F37A</span> by <a class="footer-page__link" href="https://github.com/knochenmark">Knochenmark</a> 2017©</p>
+      <p>Made with <span class="rotator"><span class="emoji slides">&#x1F37A &#x1F355 &#x1F4AA &#x1F35C &#x1F496</span></span> by <a class="footer-page__link" href="https://github.com/knochenmark">Knochenmark</a> 2017©</p>
     </footer>
     <script async="async" src="assets/js/main.js"></script>
   </body>
