📝  Rework some project descriptions and add feature tags

--- a/index.html
+++ b/index.html
@@ -104,7 +104,13 @@
               </div>
               <div class="project-desc">
                 <div class="project-title">Weather App</div>
-                <div class="project-text">Using the darksky weather API to display the current weather, some other metrics and a preview of the current week.</div>
+                <div class="project-text">A weather app that uses the darksky weather API to display the current weather, a forcast for the week and temperature values over the day. The units can be toggled between SI and Imperial with a click on the degree symbol.</div>
+                <div class="chips">
+                  <div class="chip">Pug</div>
+                  <div class="chip">Stylus</div>
+                  <div class="chip">Js</div>
+                  <div class="chip">darksky</div>
+                </div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/qrqjaQ/">
               <div class="project-img"><img src="assets/img/pomodoro.jpg" alt="pomodoro clock"/>
@@ -115,6 +121,12 @@
               <div class="project-desc">
                 <div class="project-title">Pomodoro</div>
                 <div class="project-text">Based on the kitchen clock which is also used for the pomodoro technique to manage time intervals of 25min work and 5min breaks. This project features some really impressive pug and stylus function and mixin usage.</div>
+                <div class="chips">
+                  <div class="chip">Pug</div>
+                  <div class="chip">Stylus</div>
+                  <div class="chip">Js</div>
+                  <div class="chip">Mixins</div>
+                </div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/zwrWWP/">
               <div class="project-img"><img src="assets/img/tictac.jpg" alt="tic tac toe game"/>
@@ -124,7 +136,13 @@
               </div>
               <div class="project-desc">
                 <div class="project-title">Tic Tac Toe</div>
-                <div class="project-text">Featuring some neat looking CSS transitions and effects.</div>
+                <div class="project-text">The classic Tic-Tac-Toe game. Play a round against the computer and enjoy some neat looking CSS transitions and effects.</div>
+                <div class="chips">
+                  <div class="chip">Pug</div>
+                  <div class="chip">Stylus</div>
+                  <div class="chip">Js</div>
+                  <div class="chip">Transitions</div>
+                </div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/RRyAqE/">
               <div class="project-img"><img src="assets/img/quote.jpg" alt="quote and twitter api project"/>
@@ -134,7 +152,13 @@
               </div>
               <div class="project-desc">
                 <div class="project-title">Quote Generator</div>
-                <div class="project-text">With twitter function</div>
+                <div class="project-text">A simple Quote Generator, that uses the forismatic API to source new quotes. Request random quotes and if you find one you want to share you could use the twitter function.</div>
+                <div class="chips">
+                  <div class="chip">Pug</div>
+                  <div class="chip">Stylus</div>
+                  <div class="chip">Js</div>
+                  <div class="chip">Forismatic Api</div>
+                </div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/GjmZKr/">
               <div class="project-img"><img src="assets/img/wiki.jpg" alt="wikipedia api project"/>
@@ -145,6 +169,12 @@
               <div class="project-desc">
                 <div class="project-title">Wikipedia API</div>
                 <div class="project-text">Using the Wikipedia API</div>
+                <div class="chips">
+                  <div class="chip">Pug</div>
+                  <div class="chip">Stylus</div>
+                  <div class="chip">Js</div>
+                  <div class="chip">Wikipedia Api</div>
+                </div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/YpRBjw/">
               <div class="project-img"><img src="assets/img/twitch.jpg" alt="twitch api project"/>
@@ -154,7 +184,13 @@
               </div>
               <div class="project-desc">
                 <div class="project-title">Twitch API</div>
-                <div class="project-text">Using the Twitch API</div>
+                <div class="project-text">The app uses the Twitch API and features an overview of a selection of streamers and channels. Informations about the online status and what the streamer is playing are visible at a single glance.</div>
+                <div class="chips">
+                  <div class="chip">Pug</div>
+                  <div class="chip">Stylus</div>
+                  <div class="chip">Js</div>
+                  <div class="chip">Twitch Api</div>
+                </div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/QgjErZ/">
               <div class="project-img"><img src="assets/img/simon.jpg" alt="simon game"/>
@@ -165,6 +201,12 @@
               <div class="project-desc">
                 <div class="project-title">Simon Game</div>
                 <div class="project-text">The memory game Simon using the HTML5 Audio tag.</div>
+                <div class="chips">
+                  <div class="chip">Pug</div>
+                  <div class="chip">Stylus</div>
+                  <div class="chip">Js</div>
+                  <div class="chip">Audio</div>
+                </div>
               </div></a></div>
           <div class="project"><a href="https://codepen.io/Knochenmark/full/qaWyOx/">
               <div class="project-img"><img src="assets/img/calc.jpg" alt="calculator app"/>
@@ -175,6 +217,11 @@
               <div class="project-desc">
                 <div class="project-title">Calculator</div>
                 <div class="project-text">Based on the iphone calculator</div>
+                <div class="chips">
+                  <div class="chip">Pug</div>
+                  <div class="chip">Stylus</div>
+                  <div class="chip">Js</div>
+                </div>
               </div></a></div>
         </div>
       </article>
