🔩  Improve the mondrian animation

--- a/index.html
+++ b/index.html
@@ -18,33 +18,22 @@
       <div class="light-half">
         <div class="light">
           <div class="offscreen" id="mondrian1">
-            <div class="rectangles">
-              <div class="rec yellow"></div>
-              <div class="rec red"></div>
-              <div class="rec blue"></div>
-              <div class="rec red"></div>
-              <div class="rec yellow"></div>
-              <div class="rec yellow"></div>
-              <div class="rec red"></div>
-              <div class="rec red"></div>
-              <div class="rec yellow"></div>
-              <div class="rec blue"></div>
-              <div class="rec blue"></div>
-            </div>
-            <div class="horizontal">
-              <div class="line"></div>
-              <div class="line"></div>
-              <div class="line"></div>
-              <div class="line"></div>
-              <div class="line"></div>
-            </div>
-            <div class="vertical">
-              <div class="line"></div>
-              <div class="line"></div>
-              <div class="line"></div>
-              <div class="line"></div>
-              <div class="line"></div>
-            </div>
+            <hr class="horizontal"/><span class="vertical"></span>
+            <hr class="horizontal"/><span class="vertical"></span>
+            <div class="rec yellow"></div>
+            <hr class="horizontal"/><span class="vertical"></span>
+            <div class="rec red"></div>
+            <hr class="horizontal"/><span class="vertical"></span>
+            <div class="rec blue"></div>
+            <div class="rec red"></div>
+            <hr class="horizontal"/><span class="vertical"></span>
+            <div class="rec yellow"></div>
+            <div class="rec yellow"></div>
+            <div class="rec red"></div>
+            <div class="rec red"></div>
+            <div class="rec yellow"></div>
+            <div class="rec blue"></div>
+            <div class="rec blue"></div>
           </div>
         </div>
       </div>
