👕 update project files

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             </nav>
           </div>
         </div>
+        <div class="image-wrapper"></div>
       </div>
     </section><a class="back-to-top" href="#home"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 16.67l2.829 2.83 9.175-9.339 9.167 9.339 2.829-2.83-11.996-12.17z"/></svg></a>
     <aside class="vertical-sidebar">
@@ -234,7 +235,7 @@
     <section id="about">
       <article>
         <h1>About Me</h1>
-        <p>Hi, I'm Mark! You know what I love most about my portfolio? It's about me. You might think <span class="whois">"Who's this self-absorbed guy?"</span>. Well, thanks for this question, but I'll answer another question first. Yes, I'm good at what I do and when you love yourself, you can't help but love your craft. I like things functional and minimalistic. That's me in a nutshell. If you like my stuff, I don't really care, but if you want to invite me for a beer, drop me a line. - Mark</p>
+        <p>Hi, I'm Mark! You know what I love most about my portfolio? It's about me. You might think <span class="whois">"Who's this self-absorbed guy?"</span>. Well, thanks for this question, but I'll answer another question first. Yes, I'm good at what I do and when you love yourself, you can't help but love your craft. I like things functional and minimalistic. That's me in a nutshell. If you dont like my stuff, build your own playground, but if you enjoyed it and want to know more, just drop me a line. - Mark</p>
       </article>
     </section>
     <section id="contact">
@@ -245,7 +246,7 @@
       </article>
     </section>
     <footer class="footer-page">
-      <p>Made with <span class="rotator"><span class="emoji slides">&#x1F37A &#x1F355 &#x1F4AA &#x1F35C &#x1F496</span></span> by <a class="footer-page__link" href="https://github.com/knochenmark">Knochenmark</a> 2017©</p>
+      <p>Made with <span class="rotator"><span class="emoji slides">&#x1F37A &#x1F355 &#x1F4AA &#x1F35C &#x1F496</span></span> by <a class="footer-page__link" href="https://github.com/knochenmark">Knochenmark</a> 2018©</p>
     </footer>
     <script async="async" src="assets/js/main.js"></script>
   </body>
