🚧 Add basic i18n implementation

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="description" content="Knochenmarks Portfolio"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="assets/css/main.css"/>
-    <script async="async" src="src/js/libs/d3.min.js"></script>
-    <script async="async" src="src/js/libs/jquery-3.1.1.js"></script>
+    <link rel="stylesheet" href="assets/css/main.css"/><!-- inject:js -->
+<script src="/src/js/libs/d3.min.js"></script>
+<script src="/src/js/libs/jquery-3.1.1.js"></script>
+<!-- endinject -->
   </head>
   <body>
     <header class="header-page"></header>
@@ -49,15 +50,15 @@
       </div>
       <div class="vertical-menu">
         <nav class="home-navigation">
-          <div class="nav-item"><a href="#home" data-i18n="nav:home">Home</a></div>
-          <div class="nav-item"><a href="#projects" data-i18n="nav:projects">Projects</a></div>
-          <div class="nav-item"><a href="#about" data-i18n="nav:aboutMe">About Me</a></div>
-          <div class="nav-item"><a href="#contact" data-i18n="nav:contact">Contact</a></div>
+          <div class="nav-item"><a href="#home">Home</a></div>
+          <div class="nav-item"><a href="#projects">Projects</a></div>
+          <div class="nav-item"><a href="#about">About Me</a></div>
+          <div class="nav-item"><a href="#contact">Contact</a></div>
         </nav>
       </div>
       <div class="vertical-social">
-        <div class="icon"><a href="https://github.com/Knochenmark" title="github"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg></a></div>
-        <div class="icon codepen"><a href="https://codepen.io/Knochenmark" title="codepen"><svg viewBox="0 0 63.194 63.086" width="24" height="24">
+        <div class="icon"><a href="https://github.com/Knochenmark"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg></a></div>
+        <div class="icon codepen"><a href="https://codepen.io/Knochenmark"><svg viewBox="0 0 63.194 63.086" width="24" height="24">
     <polygon fill="none" stroke-width="5" stroke-linejoin="round" stroke-miterlimit="10" points="31.54,2.5
     60.694,21.898 31.54,41.078 2.5,21.681   "></polygon>
     <polygon fill="none" stroke-width="5" stroke-linejoin="round" stroke-miterlimit="10" points="31.54,21.789
@@ -72,7 +73,7 @@
     </aside>
     <section id="projects">
       <article>
-        <h1 data-i18n="nav:projects">Projects</h1>
+        <h1>Projects</h1>
         <div class="project-list">
               <div class="project">
                 <div class="project-img"><img src="assets/img/weather.jpg" alt="Weather App"/>
@@ -222,15 +223,15 @@
     </section>
     <section id="about">
       <article>
-        <h1 data-i18n="nav:aboutMe">About Me</h1>
+        <h1>About Me</h1>
         <p>Hi, I'm Mark! You know what I love most about my portfolio? It's about me. You might think <span class="whois">"Who's this self-absorbed guy?"</span>. Well, thanks for this question, but I'll answer another question first. Yes, I'm good at what I do and when you love yourself, you can't help but love your craft. I like things functional and minimalistic. That's me in a nutshell. If you dont like my stuff, build your own playground, but if you enjoyed it and want to know more, just drop me a line. - Mark</p>
       </article>
     </section>
     <section id="contact">
       <article>
-        <h2 data-i18n="contact:thanks">Thanks for coming by!</h2>
-        <div class="contact-content" data-i18n="contact:text">I’m always open for a chat so feel free to contact me.</div>
-        <div class="email"><span data-i18n="contact:sayHi">Say hi</span><a href="mailto:marktodd.hl@gmail.com">marktodd.hl@gmail.com</a></div>
+        <h2>Thanks for coming by!</h2>
+        <div class="contact-content">I’m always open for a chat so feel free to contact me.</div>
+        <div class="email"><span>Say hi</span><a href="mailto:marktodd.hl@gmail.com">marktodd.hl@gmail.com</a></div>
       </article>
     </section>
     <footer class="footer-page">
