Add deploy relevant files

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                     <div class="chip">Redux</div>
                     <div class="chip">Rxjs</div>
                     <div class="chip">Typestyle</div>
+                    <div class="chip">TravisCI</div>
                   </div>
                   <div class="project-text">The project offers a simple way to manage your recipe collection. Recipebox utilizes localStorage to store your recipe collection. You can add further recipes, edit existing ones and bookmark your favorites.</div>
                 </div>
